发送短信接口

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>com.lx</groupId>
     <artifactId>codeshouse</artifactId>
     <version>1.0</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
